# BeaconRaspi

./: CMakeLists.txt  README.md  make.sh  run.sh
.devcontainer/: Dockerfile.raspi_zero2  attach_container.sh  docker-compose.yml
include/hardware/: hardware_manager.hpp  hardware_params.hpp
include/ov2slam/: logger.hpp  map_manager.hpp  ov2slam.hpp  sensors_catcher.hpp  slam_params.hpp
include/path_planner/: path_manager.hpp  path_params.hpp
parameters/: hardware_params.yaml  ov2slam_params.yaml  path_params.yaml
src/: main.cpp  parameter_parser.cpp
src/hardware/: hardware_manager.cpp  hardware_params.cpp
src/ov2slam/: logger.cpp  map_manager.cpp  ov2slam.cpp  sensors_catcher.cpp  slam_params.cpp
src/path_planner/: path_manager.cpp  path_params.cpp
